--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,24 @@ a {
 * {
   box-sizing: border-box;
 }
+
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #beb4b4 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #beb4b4;
+  border-radius: 10px;
+  border: 3px solid #ffffff;
+}
